--- a/examples/Makefile-mgm210p
+++ b/examples/Makefile-mgm210p
@@ -48,7 +48,7 @@ configure_OPTIONS               = \
     --enable-ncp                  \
     --enable-radio-only           \
     --enable-linker-map           \
-    --with-examples=mg210p     \
+    --with-examples=mgm210p     \
     MBEDTLS_CPPFLAGS="$(EFR32_MBEDTLS_CPPFLAGS)" \
     $(NULL)
 
