--- a/examples/platforms/mgm210p/sleepy-demo/sleepy-demo-ftd/Makefile.am
+++ b/examples/platforms/mgm210p/sleepy-demo/sleepy-demo-ftd/Makefile.am
@@ -36,8 +36,8 @@ EFR32_BOARD_DIR = $(shell echo $(BOARD) | tr A-Z a-z)
 
 SDK_SRC_DIR = $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.7
 
-$(top_builddir)/examples/platforms/efr32mg21/libopenthread-efr32mg21.a:
-	(cd $(top_builddir)/examples/platforms/efr32mg21/ && $(MAKE) $(AM_MAKEFLAGS) libopenthread-efr32mg21.a )
+$(top_builddir)/examples/platforms/mgm210p/libopenthread-mgm210p.a:
+	(cd $(top_builddir)/examples/platforms/mgm210p/ && $(MAKE) $(AM_MAKEFLAGS) libopenthread-mgm210p.a )
 
 bin_PROGRAMS                                                                  = \
     $(NULL)
@@ -48,18 +48,18 @@ CPPFLAGS_COMMON                                                              += 
     -DPLATFORM_HEADER=\"platform/base/hal/micro/cortexm3/compiler/gcc.h\"       \
     -Wno-sign-compare                                                           \
     -I$(top_srcdir)/examples/platforms                                          \
-    -I$(top_srcdir)/examples/platforms/efr32mg21/$(EFR32_BOARD_DIR)             \
+    -I$(top_srcdir)/examples/platforms/mgm210p/$(EFR32_BOARD_DIR)             \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/src/core                                                    \
     -I$(top_srcdir)/third_party/silabs/rail_config                              \
     -I$(SDK_SRC_DIR)/hardware/kit/common/bsp                                    \
     -I$(SDK_SRC_DIR)/hardware/kit/common/drivers                                \
-    -I$(SDK_SRC_DIR)/hardware/kit/EFR32MG21_$(BOARD)/config                     \
+    -I$(SDK_SRC_DIR)/hardware/kit/MGM21_$(BOARD)/config                     \
     -I$(SDK_SRC_DIR)/platform/base/hal/micro/cortexm3/efm32                     \
     -I$(SDK_SRC_DIR)/platform/base/hal/micro/cortexm3/efm32/config              \
     -I$(SDK_SRC_DIR)/platform/common/inc                                        \
     -I$(SDK_SRC_DIR)/platform/CMSIS/Include                                     \
-    -I$(SDK_SRC_DIR)/platform/Device/SiliconLabs/EFR32MG21P/Include             \
+    -I$(SDK_SRC_DIR)/platform/Device/SiliconLabs/MGM21/Include             \
     -I$(SDK_SRC_DIR)/platform/emdrv/common/inc                                  \
     -I$(SDK_SRC_DIR)/platform/emdrv/gpiointerrupt/inc                           \
     -I$(SDK_SRC_DIR)/platform/emdrv/uartdrv/inc                                 \
