--- a/examples/platforms/Makefile.platform.am
+++ b/examples/platforms/Makefile.platform.am
@@ -81,6 +81,10 @@ if OPENTHREAD_EXAMPLES_KW41Z
 include $(top_srcdir)/examples/platforms/kw41z/Makefile.platform.am
 endif
 
+if OPENTHREAD_EXAMPLES_MGM210P
+include $(top_srcdir)/examples/platforms/mgm210p/Makefile.platform.am
+endif
+
 if OPENTHREAD_EXAMPLES_NRF52811
 include $(top_srcdir)/examples/platforms/nrf528xx/nrf52811/Makefile.platform.am
 endif
