--- a/examples/platforms/mgm210p/Makefile.platform.am
+++ b/examples/platforms/mgm210p/Makefile.platform.am
@@ -40,6 +40,7 @@ fi )
 LDADD_COMMON                                                                  += \
     $(top_builddir)/examples/platforms/mgm210p/libopenthread-mgm210p.a       \
     $(top_builddir)/third_party/silabs/libsilabs-mgm210p-sdk.a                 \
+    $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.7/platform/radio/rail_lib/autogen/librail_release/librail_config_mgm210p032jia_gcc.a    \
     $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.7/platform/radio/rail_lib/autogen/librail_release/$(LIBRAIL) \
     $(NULL)
 
